--- a/src/Components/ProfileDropdown/ProfileDropdown.css
+++ b/src/Components/ProfileDropdown/ProfileDropdown.css
@@ -2,26 +2,23 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-}
-
-
-.button{
-    width: 10%;
-    height: 10%;
+    height: 50px;
+    width: 50px;
 }
 
 .image-profile {
-    width: 10%;
-    height: 10%;
-    padding: 0px;
-    border-radius: 100%;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    border: solid 1px rgba(0, 0, 0, 0.432);
+    
 }
 
 .dropdown-menu {
-    background-color: black;
+    background-color: rgb(37, 37, 37);
     color: white;
     padding: 3px;
-    width: 20%;
+    width: 200%;
     margin-top: 5px;
 }
 
