--- a/src/Components/Plus/Plus.css
+++ b/src/Components/Plus/Plus.css
@@ -1,4 +1,4 @@
-.button {
+.plusbutton {
     padding: 2%;
     border-radius: 10px;
     background-color: #ca0000;
@@ -8,7 +8,7 @@
 
 /* Media query for screens smaller than 600px */
 @media screen and (max-width: 600px) {
-    .button {
+    .plusbutton {
         height: 40px;
         width: 40px;
     }
@@ -16,7 +16,7 @@
 
 /* Media query for screens between 600px and 1200px */
 @media screen and (min-width: 601px) and (max-width: 1200px) {
-    .button {
+    .plusbutton {
         height: 45px;
         width: 45px;
     }
@@ -24,7 +24,7 @@
 
 /* Media query for screens larger than 1200px */
 @media screen and (min-width: 1201px) {
-    .button {
+    .plusbutton {
         height: 50px;
         width: 50px;
     }
