Correct Plus Button

--- a/src/Components/Plus/Plus.css
+++ b/src/Components/Plus/Plus.css
@@ -2,36 +2,12 @@
     padding: 2%;
     border-radius: 10px;
     background-color: #ca0000;
-    height: 100% !important;
-    width: 100% !important;
-}
-
-/* Media query for screens smaller than 600px */
-@media screen and (max-width: 600px) {
-    .plusbutton {
-        height: 40px;
-        width: 40px;
-    }
-}
-
-/* Media query for screens between 600px and 1200px */
-@media screen and (min-width: 601px) and (max-width: 1200px) {
-    .plusbutton {
-        height: 45px;
-        width: 45px;
-    }
-}
-
-/* Media query for screens larger than 1200px */
-@media screen and (min-width: 1201px) {
-    .plusbutton {
-        height: 50px;
-        width: 50px;
-    }
+    height: 60px;
+    width: 60px;
+    cursor: pointer;
 }
 
 .white-plus-icon{
     fill: white;
-    font-size: 150%
-
+    font-size: 200%
 }
